@@ -36,6 +36,7 @@
  * #896 (Python iteration in ProcessSample leads to capacity overflow)
  * #897 (Bug in Graph::draw with small data)
  * #898 (Could not save/load some persistent classes)
+ * #899 (PythonDistribution copula crash when parallelism is active)
  * #905 (Bogus MaternModel::setParameter)
  * #906 (t_LevelSetMesher_std fails on most non-Intel based chips)
 
